[package]
name = "viz-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/viz-test"
description = "The core traits and types in for Viz"
keywords = ["async", "framework", "http", "service", "web"]
categories = ["asynchronous", "network-programming", "web-programming"]
publish = false

[dependencies]
viz.workspace = true

sessions = { version = "0.4.0", features = ["memory"] }
nano-id = "0.3"

reqwest = { version = "0.11.18", features = ["cookies", "json", "multipart"]}
tokio = { version = "1.28", features = ["full"] }
