[package]
name = "viz-tower"
version = "0.1.0"
documentation = "https://docs.rs/viz-tower"
description = "An adapter for tower service"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
viz-core.workspace = true
http-body-util.workspace = true
tower = { workspace = true, features = ["util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tower-http = { workspace = true, features = ["limit", "request-id", "timeout"] }

[lints]
workspace = true
