[package]
name = "viz"
version = "0.4.5"
edition = "2021"
rust-version = "1.60"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
homepage = "https://viz.rs"
documentation = "https://docs.rs/viz"
repository = "https://github.com/viz-rs/viz"
keywords = ["async", "framework", "http", "service", "web"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "Fast, robust, flexible, lightweight web framework for Rust"
publish = true

[features]
default = [
  "http1",
  "state",
  "limits",
  "query",
  "form",
  "json",
  "params",
  "multipart",
  "cookie",
  "session",
]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

state = ["viz-core/state"]
limits = ["viz-core/limits"]
query = ["viz-core/query"]
form = ["viz-core/form"]
json = ["viz-core/json"]
params = ["viz-core/params"]
multipart = ["viz-core/multipart"]
websocket = ["viz-core/websocket"]
sse = ["viz-core/sse"]

cookie = ["viz-core/cookie"]
cookie-private = ["viz-core/cookie-private"]
cookie-signed = ["viz-core/cookie-signed"]

session = ["cookie", "viz-core/session"]
csrf = ["cookie", "viz-core/csrf"]
cors = ["viz-core/cors"]

compression = ["viz-core/compression"]

unix-socket = []

macros = ["dep:viz-macros"]

handlers = ["dep:viz-handlers"]
serve = ["handlers", "viz-handlers?/serve"]
embed = ["handlers", "viz-handlers?/embed"]

otel = ["viz-core/otel"]
otel-tracing = ["otel", "viz-core/otel-tracing"]
otel-metrics = ["otel", "viz-core/otel-metrics"]
otel-prometheus = ["handlers", "viz-handlers?/prometheus"]

rustls = ["dep:rustls-pemfile", "dep:tokio-rustls", "dep:futures-util"]
native-tls = ["dep:tokio-native-tls", "dep:futures-util"]

[dependencies]
viz-core = { path = "../viz-core", version = "0.4.5" }
viz-router = { path = "../viz-router", version = "0.4.5" }
viz-handlers = { path = "../viz-handlers", version = "0.4.5", default-features = false, optional = true }
viz-macros = { path = "../viz-macros", version = "0.1.0", optional = true }

hyper = { version = "0.14", features = ["server", "stream", "tcp"] }
tokio = { version = "1.25", features = ["net"] }

futures-util = { version = "0.3.26", optional = true }
rustls-pemfile = { version = "1.0.2", optional = true }
tokio-rustls = { version = "0.23.4", optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
