[package]
name = "viz"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Fast, robust, flexible, lightweight web framework for Rust"
keywords = ["async", "framework", "http", "service", "web"]
categories = ["asynchronous", "network-programming", "web-programming"]

[features]
default = [
  "http1",
  "state",
  "limits",
  "query",
  "form",
  "json",
  "params",
  "multipart",
  "cookie",
  "session",
  "fs",
]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

state = ["viz-core/state"]
limits = ["viz-core/limits"]
query = ["viz-core/query"]
form = ["viz-core/form"]
json = ["viz-core/json"]
params = ["viz-core/params"]
multipart = ["viz-core/multipart"]
websocket = ["viz-core/websocket"]
sse = ["viz-core/sse"]
fs = ["viz-core/fs"]

cookie = ["viz-core/cookie"]
cookie-private = ["viz-core/cookie-private"]
cookie-signed = ["viz-core/cookie-signed"]

session = ["cookie", "cookie-private", "viz-core/session"]
csrf = ["cookie", "cookie-private", "viz-core/csrf"]
cors = ["viz-core/cors"]

compression = ["viz-core/compression"]

unix-socket = []

macros = ["dep:viz-macros"]

handlers = ["dep:viz-handlers"]
serve = ["handlers", "viz-handlers?/serve"]
embed = ["handlers", "viz-handlers?/embed"]

otel = ["viz-core/otel"]
otel-tracing = ["otel", "viz-core/otel-tracing"]
otel-metrics = ["otel", "viz-core/otel-metrics"]
otel-prometheus = ["handlers", "viz-handlers?/prometheus"]

rustls = ["dep:rustls-pemfile", "dep:tokio-rustls", "dep:futures-util"]
native-tls = ["dep:tokio-native-tls", "dep:futures-util"]

[dependencies]
viz-core.workspace = true
viz-router.workspace = true
viz-handlers = { workspace = true, optional = true }
viz-macros = { workspace = true, optional = true }

hyper.workspace = true
hyper-util.workspace = true

futures-util = { workspace = true, optional = true }

rustls-pemfile = { workspace = true, optional = true }

tokio-native-tls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
