[package]
name = "viz"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Fast, robust, flexible, lightweight web framework for Rust"
keywords = ["async", "framework", "http", "service", "web"]
categories = ["asynchronous", "network-programming", "web-programming"]

[features]
default = [
  "state",
  "limits",
  "query",
  "form",
  "json",
  "multipart",
  "params",
  "cookie",
  "session",

  "http1",
]

state = ["viz-core/state"]
limits = ["viz-core/limits"]

query = ["viz-core/query"]
form = ["viz-core/form"]
json = ["viz-core/json"]
multipart = ["viz-core/multipart"]
params = ["viz-core/params"]

cookie = ["viz-core/cookie"]
cookie-private = ["viz-core/cookie-private"]
cookie-signed = ["viz-core/cookie-signed"]

session = ["cookie", "cookie-private", "viz-core/session"]

websocket = ["viz-core/websocket"]
sse = ["viz-core/sse"]
fs = ["viz-core/fs"]

csrf = ["cookie", "cookie-private", "viz-core/csrf"]
cors = ["viz-core/cors"]

compression = ["viz-core/compression"]

http1 = ["dep:hyper", "dep:hyper-util", "hyper?/http1", "hyper-util?/http1"]
http2 = ["dep:hyper", "dep:hyper-util", "hyper?/http2", "hyper-util?/http2"]

unix-socket = []

macros = ["dep:viz-macros"]

handlers = ["dep:viz-handlers"]
serve = ["handlers", "viz-handlers?/serve"]
embed = ["handlers", "viz-handlers?/embed"]

otel = ["viz-core/otel"]
otel-tracing = ["otel", "viz-core/otel-tracing"]
otel-metrics = ["otel", "viz-core/otel-metrics"]
otel-prometheus = ["handlers", "viz-handlers?/prometheus"]

rustls = ["dep:rustls-pemfile", "dep:futures-util", "dep:tokio-rustls"]
native-tls = ["dep:futures-util", "dep:tokio-native-tls"]

[dependencies]
viz-core.workspace = true
viz-router.workspace = true
viz-handlers = { workspace = true, optional = true }
viz-macros = { workspace = true, optional = true }

hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }

futures-util = { workspace = true, optional = true }
tracing.workspace = true

rustls-pemfile = { workspace = true, optional = true }
tokio-native-tls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }

tokio = { workspace = true, features = ["macros"] }
tokio-util = { workspace = true, features = ["net"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
