[package]
name = "limits-example"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
vidi = { workspace = true, features = ["limits", "json", "form", "multipart"] }

serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
