[package]
name = "session"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
viz = { workspace = true, features = ["cookie-signed", "session"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

sessions = { version = "0.4.0", features = ["memory"] }
nano-id = "0.3"
