[package]
name = "session-example"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
vidi = { workspace = true, features = ["session"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

sessions = { workspace = true, features = ["memory"] }
nano-id = "0.4"
