[package]
name = "sse"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
viz = { path = "../../viz", features = ["sse"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream.workspace = true
mime.workspace = true
serde_json.workspace = true
futures-util.workspace = true
systemstat = { version = "0.1", features = ["serde"] }
