[package]
name = "sse-example"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
vidi = { workspace = true, features = ["sse"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream.workspace = true
mime.workspace = true
serde_json.workspace = true
futures-util.workspace = true
systemstat = { version = "0.2", features = ["serde"] }
