[package]
name = "unix-socket-example"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
vidi = { workspace = true, features = ["unix-socket"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
