[package]
name = "sea-orm-example"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
viz = { workspace = true, features = ["serve"] }
serde.workspace = true

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "1.0", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }

[lints]
workspace = true
