[package]
name = "otel-metrics"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
viz = { path = "../../../viz", features = ["otel-metrics", "otel-prometheus"] }

tokio = { workspace = true, features = [ "rt-multi-thread", "macros" ] }
opentelemetry = { workspace = true, default-features = false, features = ["metrics"]}
