[package]
name = "otel-metrics"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
viz = { workspace = true, features = ["otel-metrics", "otel-prometheus"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
opentelemetry = { workspace = true, features = ["metrics"]}
opentelemetry_sdk = { workspace = true, features = ["metrics"] }
