[package]
name = "otel-metrics-example"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
vidi = { workspace = true, features = ["otel-metrics", "otel-prometheus"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
opentelemetry = { workspace = true, features = ["metrics"]}
opentelemetry_sdk = { workspace = true, features = ["metrics"] }
