[package]
name = "otel-tracing-example"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
viz = { workspace = true, features = ["otel-tracing"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
opentelemetry.workspace = true
opentelemetry-otlp = { version = "0.15", default-features = false,  features = ["trace", "http-proto"] }
opentelemetry_sdk = { workspace = true, features = ["trace", "rt-tokio-current-thread"] }
