[package]
name = "otel-tracing-example"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
vidi = { workspace = true, features = ["otel-tracing"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = [
    "trace",
    "rt-tokio-current-thread",
] }
opentelemetry-otlp = { workspace = true, default-features = false, features = [
    "trace",
    "http-proto",
] }
