[package]
name = "openapi-example"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
viz.workspace = true

http-body-util.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

utoipa = "4"
utoipa-swagger-ui = "7"
