[package]
name = "template-minijinja"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
viz.workspace = true

serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
minijinja = { version = "1", features = ["loader"] }
once_cell = "1.19"
